# portable

./: .env  .gitignore  Cargo.toml  README.md
scripts/: install.sh
src/: main.rs
src/model/: api.rs  cli.rs  mod.rs
